tests/baselines/reference/unicodeExtendedEscapesInRegularExpressions17(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
unicodeExtendedEscapesInRegularExpressions17.ts(1,13): error TS1125: Hexadecimal digit expected.
unicodeExtendedEscapesInRegularExpressions17.ts(1,14): error TS1508: Unexpected '}'. Did you mean to escape it with backslash?
unicodeExtendedEscapesInRegularExpressions17.ts(1,18): error TS1125: Hexadecimal digit expected.
unicodeExtendedEscapesInRegularExpressions17.ts(1,19): error TS1508: Unexpected '}'. Did you mean to escape it with backslash?
unicodeExtendedEscapesInRegularExpressions17.ts(1,23): error TS1125: Hexadecimal digit expected.
unicodeExtendedEscapesInRegularExpressions17.ts(1,24): error TS1508: Unexpected '}'. Did you mean to escape it with backslash?
unicodeExtendedEscapesInRegularExpressions17.ts(1,27): error TS1501: This regular expression flag is only available when targeting 'es6' or later.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== unicodeExtendedEscapesInRegularExpressions17.ts (7 errors) ====
    var x = /\u{r}\u{n}\u{t}/gu;
                
!!! error TS1125: Hexadecimal digit expected.
                 ~
!!! error TS1508: Unexpected '}'. Did you mean to escape it with backslash?
                     
!!! error TS1125: Hexadecimal digit expected.
                      ~
!!! error TS1508: Unexpected '}'. Did you mean to escape it with backslash?
                          
!!! error TS1125: Hexadecimal digit expected.
                           ~
!!! error TS1508: Unexpected '}'. Did you mean to escape it with backslash?
                              ~
!!! error TS1501: This regular expression flag is only available when targeting 'es6' or later.
    